2000-12-11  Andreas J. Koenig  <andreas.koenig@anima.de>

	* Skip symlinks. Symlinks are considered inappropriate in CPAN
	author directories. They violate the principle of a one to one
	relationship between filename and file.

2000-12-10  Andreas J. Koenig  <andreas.koenig@anima.de>

	* Releasing as 1.003
	
	* original version; created by h2xs 1.19