@@ -1,4 +1,4 @@
-# CHECKSUMS file written on Mon Dec 11 10:02:51 2000 by CPAN::Checksums (v1.006)
+# CHECKSUMS file written on Mon Dec 11 13:36:12 2000 by CPAN::Checksums (v1.007)
 $cksum = {
   '42.gz' => {
     'md5-ungz' => '50a2fabfdd276f573ff97ace8b11c5f4',
@@ -6,6 +6,12 @@ $cksum = {
     'md5' => '915cdde7181ab542763969e063b7a9a9',
     'shortname' => '42.gz',
     'size' => '26'
+  },
+  '43' => {
+    'mtime' => '2000-12-11',
+    'md5' => 'f0287f33eba7192e2a9c6a14f829aa1a',
+    'shortname' => '430.43',
+    'size' => '3'
   },
   'RCS' => {
     'isdir' => 1,
@@ -16,11 +22,5 @@ $cksum = {
     'md5' => '14c7bde8c9a86c3907305af67e8d15bb',
     'shortname' => 'updated0.t',
     'size' => '1375'
-  },
-  '43' => {
-    'mtime' => '2000-12-11',
-    'md5' => 'f0287f33eba7192e2a9c6a14f829aa1a',
-    'shortname' => '430.43',
-    'size' => '3'
   }
 };
