@@ -1,6 +1,7 @@
 head	1.2;
 access;
 symbols
+	v1_007:1.2
 	v1_005:1.2
 	v1_004:1.2
 	v1_003:1.2
